CHANGES IN VERSION 1.1.0-1.1.7
-------------------------

    o fix a bug in snpgdsVCF2GDS when 'method="biallelic.only"'

    o add 'snpgdsVCF2GDS_R' for the R implementation

    o fix a bug in snpgdsBED2GDS if 'family=TRUE'

    o 'snpgdsGDS2BED' allows the file name of GDS

    o improve 'snpgdsSlidingWindow'

    o add an option 'ignore.chr.prefix' to the function 'snpgdsVCF2GDS'

    o v1.1.5: add 'Fst estimation' to the vignette

    o v1.1.6: bug fix if 'requireNamespace("SNPRelate")' is called from
      other packages

    o v1.1.7: snpgdsPCA uses 'DSPEVX' to compute eigenvalues and eigenvectors
      instead of 'DSPEV' if top eigenvalues are required only (significant
      improvement on computing speed)


CHANGES IN VERSION 0.99.1-0.99.3
-------------------------

    o an option to create an integer snp.id when converting from PLINK

    o a new function 'snpgdsFst' to estimate Fst

    o minor fixes


CHANGES IN VERSION 0.99.0
-------------------------

    o be a Bioconductor package

    o fully support long vectors (>= R v3.0)

    o >5x speedup in the function 'snpgdsVCF2GDS'

    o SNP GDS format allows character-type chromosome codes

    o add a new argument 'ref.allele' in 'snpgdsVCF2GDS'

    o add new functions 'snpgdsOpen' and 'snpgdsClose'

    o add a new function 'snpgdsTranspose' to transpose the genotypic matrix

    o add a new function 'snpgdsAlleleSwitch' to switch alleles if needed

    o add a new function 'snpgdsApartSelection'

    o add a new function 'snpgdsGEN2GDS' to import Oxford GEN data

    o use NA instead of 3 as missing value in 'snpgdsGetGeno'

    o add a new argument 'snpfirstdim' in the function 'snpgdsGDS2BED'

    o add a new argument 'with.id' in the functions 'snpgdsSNPRateFreq'
      and 'snpgdsSampMissRate'

    o return a numeric vector instead of data.frame in 'snpgdsLDpair'

    o add estimating nine Jacquard's coefficients in 'snpgdsIBDMLE'

    o fix the memory issues reported by valgrind

