@@ -4,7 +4,7 @@ useDynLib(SNPRelate,
     gnrChromParse, gnrChromParseNumeric, gnrChromRangeNumeric,
     gnrConvBED2GDS, gnrConvGDS2BED, gnrConvGDS2EIGEN,
     gnrConvGDS2PED, gnrCopyGeno, gnrCopyGenoMem, gnrDiss,
-    gnrDistPerm, gnrEIGMIX, gnrErrMsg, gnrFst, gnrGetGenoDim,
+    gnrDistPerm, gnrEIGMIX, gnrErrMsg, gnrFst, gnrHWE, gnrGetGenoDim,
     gnrGRM, gnrIBD_KING_Homo, gnrIBD_KING_Robust, gnrIBD_LogLik,
     gnrIBD_LogLik_k01, gnrIBD_MLE, gnrIBD_MLE_Jacquard, gnrIBD_PLINK,
     gnrIBDSelSampID_List1, gnrIBDSelSampID_List2, gnrIBSAve,
